# FlappyBirds

./: .gitignore  AssetManager.cpp  AssetManager.h  Bird.cpp  Bird.h  CMakeLists.txt  Collision.cpp  Collision.h  DEFINITIONS.h  DEFINITIONS.hpp  Game.cpp  Game.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  Ground.cpp  Ground.h  HeadupDisplay.cpp  HeadupDisplay.h  InputManager.cpp  InputManager.h  IntroState.cpp  IntroState.h  MainMenuState.cpp  MainMenuState.h  Pipe.cpp  Pipe.h  State.h  StateMachine.cpp  StateMachine.h  main.cpp
